proof read theory

--- a/sections/theory.tex
+++ b/sections/theory.tex
@@ -1,4 +1,4 @@
 \part{\LARGE{Theory}}
 \label{sec:theory}
 
-This chapter describes the theoretical framework of the experimental measurements discussed in this thesis. Section  \ref{sec:SM} introduces the SM of particle physics and concepts relevant to the thesis. Section \ref{sec:SM_Incomplete} discusses the outstanding problems with the Standard Model, thus, motivating the experimental measurement. Section \ref{sec:Pheno} discusses the phenomenology of the proton-proton collisions, and Section \ref{sec:EWKPheno} discusses the physics of two $Z$ bosons production in an association of two jets. 
+This chapter describes the theoretical framework of the experimental measurements discussed in this thesis. Section  \ref{sec:SM} introduces the Standard Model of particle physics and concepts relevant to the thesis. Section \ref{sec:SM_Incomplete} discusses the outstanding problems with the SM, thus, motivating the experimental measurement. Section \ref{sec:Pheno} discusses the phenomenology of the proton-proton collisions, and Section \ref{sec:EWKPheno} discusses the physics of two $Z$ bosons production in an association of two jets. 
