--- a/sections/theory_EWkProcess.tex
+++ b/sections/theory_EWkProcess.tex
@@ -1,7 +1,9 @@
-\section{ Electroweak Diboson Physics }	
+\section{ Electroweak Diboson Physics } 
 \label{sec:EWKPheno}
 
-In LHC, two types of physics processes, the QCD production at the order $\alpha_{S}^{\geq 2} \alpha_{EWK}^{4}$ and the EWK production at order $\alpha_{EWK}^6$ contribute to the production of di-$Z$ bosons in an association of two jets ($ZZjj \rightarrow 4\ell jj$) \cite{CMSRun2ZZjj}. Figures \ref{fig:ZZjjFeynmanDiag_QCD_qq} and \ref{fig:ZZjjFeynmanDiag_QCD_gg} show the Feynman diagram at leading order for the QCD ZZjj process, whereas figure \ref{fig:ZZjjFeynmanDiag_EWk} shows the Feynman diagram at leading order for the EWK production of ZZjj \cite{PowhegV2ZZjj}. The EWK production consists of two sets of interactions, first, the Vector Boson Scattering processes involving either triple (figure \ref{fig:ZZjjFeynmanDiag_EWk_a}) or quartic (figure \ref{fig:ZZjjFeynmanDiag_EWk_b}) self-interactions of the gauge-bosons, and second the diagrams featuring the Higgs bosons (figure \ref{fig:ZZjjFeynmanDiag_EWk_c} $\&$ \ref{fig:ZZjjFeynmanDiag_EWk_d}). The scattering amplitudes of the VBS processes involving longitudinally polarized vector bosons grow quadratically with the center of mass energy ($\sqrt{s}$), eventually violating the unitarity bounds. The precise SM interference between the Higgs-featured process and the VBS process restores the unitarity  \cite{VBSWWWW}. As discussed in Section \ref{subsubsec:HiggsMech}, the massive $W$ and $Z$ bosons get their masses via the BEH mechanism through EWSB. As a consequence of EWSB, the $W$ and $Z$ bosons acquire an additional degree of freedom (the longitudinal polarization mode) whose scattering interfere with the Higgs-featured processes. Thus, the study of electroweak production of the di-$Z$ bosons in association with two jets provides a direct probe of the EWSB, which is at the heart of the SM \cite{CMSRun2ZZjj}. 
+In LHC, two types of physics processes, the QCD production at the order $\alpha_{S}^{\geq 2} \alpha_{EWK}^{4}$ and the EWK production at order $\alpha_{EWK}^{\geq6}$ contribute to the production of di-$Z$ bosons in an association of two jets $[ ZZ( \rightarrow 4\ell) jj ]$ \cite{CMSRun2ZZjj}. Figures \ref{fig:ZZjjFeynmanDiag_QCD_qq} and \ref{fig:ZZjjFeynmanDiag_QCD_gg} show the Feynman diagrams at leading order for parton-initiated and gluon loop-initiated QCD $ZZ( \rightarrow 4\ell) jj$ process, respectively, whereas figure \ref{fig:ZZjjFeynmanDiag_EWk} shows the Feynman diagrams at leading order for the EWK production of $ZZ( \rightarrow 4\ell) jj$ \cite{PowhegV2ZZjj}. The EWK production consists of two sets of interactions, first, the Vector Boson Scattering processes involving either triple (Figure \ref{fig:ZZjjFeynmanDiag_EWk_a}) or quartic (Figure \ref{fig:ZZjjFeynmanDiag_EWk_b}) self-interactions of the gauge-bosons, and second the diagrams featuring the Higgs bosons (Figure \ref{fig:ZZjjFeynmanDiag_EWk_c} $\&$ \ref{fig:ZZjjFeynmanDiag_EWk_d}). The scattering amplitudes of the VBS processes involving longitudinally polarized vector bosons grow quadratically with the center of mass energy ($\sqrt{s}$), eventually violating the unitarity bounds. The precise SM interference between the Higgs-featured and VBS processes restores the unitarity \cite{VBSWWWW}.
+
+As discussed in Section \ref{subsubsec:HiggsMech}, the massive $W$ and $Z$ bosons get their masses via the BEH mechanism through EWSB. As a consequence of EWSB, the $W$ and $Z$ bosons acquire an additional degree of freedom (the longitudinal polarization mode) whose scattering interfere with the Higgs-featured processes. Thus, measuring the cross-sections of electroweak production of the di-$Z$ bosons in association with two jets provides a direct probe of the EWSB, which is at the heart of the SM \cite{CMSRun2ZZjj}. As the unitarity is restored at high energies, the cross-section of the electroweak $ZZ( \rightarrow 4\ell) jj$ process is sensitive to possible BSM deviations at high energies. Therefore, measuring the cross-sections of the electroweak $ZZ( \rightarrow 4\ell) jj$ processes differentially as a function of kinematically sensitive observables is essential. 
 
 \begin{figure}[!htbp]
   \begin{center}
@@ -71,6 +73,6 @@ Similarly, the couplings of Higgs to vector bosons are also predicted precisely 
 \label{eqn:HVVCoupling}
 \end{equation}
 
-The EWK production of $ZZjj$ is extremely sensitive to any possible anomalous triple gauge couplings (aTGC), anomalous quartic gauge couplings (aQGC), or anomalous Higgs to vector boson coupling \cite{SensitivityNP} \cite{EboliModelaQGC} \cite{BSM_Simple2HDM}. Therefore, it is imperative to probe the high energy behavior of the EWK production of $ZZjj$ to seek possible deviations from the physics processes beyond the Standard Model (BSM). 
+The EWK production of $ZZ( \rightarrow 4\ell ) jj$ is extremely sensitive to any possible anomalous triple gauge couplings (aTGC), anomalous quartic gauge couplings (aQGC), or anomalous Higgs to vector boson coupling \cite{SensitivityNP} \cite{EboliModelaQGC} \cite{BSM_Simple2HDM}. Therefore, it is imperative to probe the high energy behavior of the EWK production of $ZZ( \rightarrow 4\ell ) jj$ to seek possible deviations from the physics processes beyond the Standard Model (BSM). 
 
-The EWK $ZZjj$ production with each $Z$ boson decaying to a pair of same-flavor opposite-charge (SF-OC) lepton pairs is an extremely rare process. Moreover, with limited statistics in Run$-2$, the QCD background processes dominate the $ZZjj \rightarrow 4\ell jj$ final state \cite{ATLASZZjj}. Therefore, the differential cross-sections discussed in this thesis are measured in a VBS-enhanced phase space with a high fraction of events resulting from the EWK $ZZjj$ process. The enhanced phase space relies on the characteristic feature of the EWK process with two jets (jj) in the forward-backward region originating from the scattered initial-state quarks. These jets have significant rapidity separation, and no additional hadronic activity from the hard scattering between the two jets \cite{RapidityGapCite}. The decay of the two Z bosons into SF-OC muons or electron pairs defines the final signature of the VBS-$ZZjj$-like event.
+The EWK $ZZ( \rightarrow 4\ell ) jj$ production with each $Z$ boson decaying to a pair of SF-OC lepton pair is an extremely rare process. Moreover, with limited statistics in Run$-2$, the QCD background processes dominate the $ZZ( \rightarrow 4\ell ) jj$ final state \cite{ATLASZZjj}. Therefore, the differential cross-sections discussed in this thesis are measured in a VBS-enhanced phase space with a high fraction of events resulting from the EWK $ZZ( \rightarrow 4\ell ) jj$ process. The enhanced phase space relies on the characteristic feature of the EWK process with two jets (jj) in the forward-backward region originating from the scattered initial-state quarks. These jets have significant rapidity separation, large invariant mass, and no additional hadronic activity from the hard scattering between the two jets \cite{RapidityGapCite}. The decay of the two Z bosons into SF-OC muons or electron pairs defines the final signature of the VBS-$ZZ( \rightarrow 4\ell ) jj$-like event.
