--- a/sections/theory_StandardModelShortComings.tex
+++ b/sections/theory_StandardModelShortComings.tex
@@ -1,9 +1,7 @@
 \section{Limitations of the Standard Model} 
 \label{sec:SM_Incomplete}
 
-Many discoveries have experimentally validated the Standard Model's predictions since the $20^{th}$ century. The breakthrough discovery of the Higgs boson in 2012 at the LHC validated the last piece of the theory \cite{CMSHiggsDiscovery}$\&$ \cite{ATLASHiggsDiscovery}. Many predicted parameters, such as production cross-sections and decay branching ratios for several processes, have been measured with high precision. No, statistically significant discrepancy from theory has been observed except for the controversial $W^{\pm}$ boson mass measurement from the CDF $II$ Collaboration \cite{CDFWMass}.
-
-Despite the incredible success of the theory, experimental evidence suggests that the theory is incomplete. SM has the following limitations:
+Many discoveries have experimentally validated the Standard Model's predictions since the $20^{th}$ century. The breakthrough discovery of the Higgs boson in 2012 at the LHC validated the last piece of the theory \cite{CMSHiggsDiscovery}$\&$ \cite{ATLASHiggsDiscovery}. Many predicted parameters, such as production cross-sections and decay branching ratios for several processes, have been measured with high precision. No, statistically significant discrepancy from theory has been observed except for the controversial $W^{\pm}$ boson mass measurement from the CDF $II$ Collaboration \cite{CDFWMass}. Despite the incredible success of the theory, experimental evidence suggests that the theory is incomplete. SM has the following limitations:
 
 \begin{itemize}
 
@@ -11,7 +9,7 @@ Despite the incredible success of the theory, experimental evidence suggests tha
 
 \item{SM only describes $5\%$ of the total energy density of the universe. It fails to explain dark matter whose existence is experimentally supported by astrophysical observations such as galactic rotation curves and gravitational lensing \cite{DMGravitationalLensing}. It also does not explain dark energy. }
 
-\item{The CP violation allowed in SM cannot explain the amount of anti-matter asymmetry observed in the universe. }
+\item{The CP violation allowed in SM cannot explain the amount of matter/anti-matter asymmetry observed in the universe. }
 
 \item{ The strengths of the four fundamental forces are different by many orders of magnitude. It has yet to be understood the hierarchy of such interactions.}
 
@@ -19,4 +17,4 @@ Despite the incredible success of the theory, experimental evidence suggests tha
 
 \end{itemize}
  
-These limitations suggest that the SM is an effective field theory, only describing an approximation of our universe, thus, motivating the experimental searches for new physics beyond the Standard Model. Experimentally there are two ways to look for BSM physics, direct searches and indirect precision measurements. BSM-predicted particles are searched directly by direct searches. The thesis focuses on the indirect approach, where precisely measured SM-predicted differential cross-sections are compared with state-of-the-art theoretical predictions looking for hints of deviation caused by the BSM physics. 
+These limitations suggest that the SM is an effective field theory, only describing an approximation of our universe, thus, motivating the experimental searches for new physics beyond the Standard Model. Experimentally there are two ways to look for BSM physics, direct searches and indirect precision measurements. Experimental signatures of BSM-predicted particles, such as their invariant mass, are searched directly by direct searches. The thesis focuses on the indirect approach, where precisely measured SM-predicted differential cross-sections are compared with state-of-the-art theoretical predictions looking for hints of deviation caused by the BSM physics. 
